@@ -1,3 +1,8 @@
+2006-08-05  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
+
+    * olive/frontend/gtk/diff.py: Diff window now destroyed if not a branch
+    * olive.glade: added shadow to Diff window's scrollbars
+
 2006-08-03  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
     * olive/frontend/gtk/status.py: Status window implemented
